fix overlap of upper form in accordion

--- a/app/assets/stylesheets/widgets/_form.scss
+++ b/app/assets/stylesheets/widgets/_form.scss
@@ -1,6 +1,6 @@
 .form-container {
   height: auto;
-  padding: 10px 20px;
+  padding: 10px 20px 20px 20px;
   border: 2px solid $background_highlight;
   border-radius: 6px;
   -webkit-border-radius: 6px;
@@ -23,6 +23,8 @@
 }
 
 form {
+  margin: 0;
+  padding: 0;
   input, select, textarea {
     color: $text_inverted;
   }
